k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eemcars
  labels:
    app: eemcars
    environment: production
